learned about the basic writing syntax

--- a/lab1_jb.ipynb
+++ b/lab1_jb.ipynb
@@ -4,8 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Lab1"
+    "#Lab1\n",
+    "\n",
+    "##Introduction\n",
+    "\n",
+    "###Part1\n",
+    "\n",
+    "I think tht *this* is a **correct**.\n",
+    "\n",
+    "this is a <sub>1</sub> text\n",
+    "\n",
+    "[Click Me](https://www.google.com/)\n",
+    "\n",
+    "This is the list\n",
+    "* apple\n",
+    "** banana\n",
+    "\n",
+    "1. firdt\n",
+    "2. second\n",
+    "\n",
+    "this is a table:\n",
+    "| head 1 | head 2 |\n",
+    "|--------|--------|\n",
+    "| row 1  | row 2  |\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
