--- a/lab_2.ipynb
+++ b/lab_2.ipynb
@@ -5544,9 +5544,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "CSCN8010_classic_ml",
    "language": "python",
-   "name": "python3"
+   "name": "cscn8010_classic_ml"
   },
   "language_info": {
    "codemirror_mode": {
